[package]
name = "ccfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
log = "0.4.17"
tokio-tungstenite = "0.18.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.26"
env_logger = "0.10.0"
futures-channel = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
include_dir = "0.7.3"
clap = { version = "4.1.8", features = ["derive"] }
fuse_mt = "0.6.0"
libc = "0.2.139"
